# Meson-Fastsum

./: .gitignore  GENERATE.md  README.md
Results/: README.md  human_conf_table.tex
Results/Plots_mass_tdepen/ax_plus/ll/cosh/data_analysed/sc/: plots.gn
Results/plots_temperature_mass/: README.md
autom_colors/: diff_calc.py  iterate_nt.sh
autom_colors/128/: cleanfit_ss.g5
autom_colors/20/: cleanfit_ss.g5
autom_colors/20/diff_test/: diff_calc.py  effMass_g5_ll_128x32.uu
autom_colors/24/: cleanfit_ll.g5  effMass_g5_ss_24x32.uu
autom_colors/32/: cleanfit_ll.g5  effMass_g5_ss_32x32.uu
autom_colors/36/: effMass_g5_ss_36x32.uu
autom_colors/64/: cleanfit_ll.g5
autom_colors/DATA/ax_minus/cc/128/: cleanfit_ss.ax_minus  effMass_ax_minus_ll_128x32.cc  (+1 more)
autom_colors/data_all/: master.sh
autom_colors/data_all/scripts/: diff_calc.py  iterate_nt.sh
autom_colors/data_all/scripts/make-table/: gen_table.sh  utils_table.sh
autom_colors/scripts/: diff_calc.py  parser.sh
autom_colors/scripts/make-table/: utils_table.sh
conf_table_autom/: README.md
conf_table_autom/scripts/: diff_calc.py  iterate_nt.sh  parser.sh
scripts/: conc_plots.sh  gen_plotCorr.sh  reorder_plot.sh
scripts/make-table/: gen_table.sh  utils_table.sh
uu/: diff_calc.py
uu/20/: effMass_g5_ss_20x32.uu
uu/20/diff_test/: cleanfit_ll.g5
uu/24/: cleanfit_ss.g5  effMass_g5_ll_24x32.uu
uu/28/: cleanfit_ss.g5
uu/36/: cleanfit_ss.g5
uu/48/: cleanfit_ll.g5  cleanfit_ss.g5
uu/56/: effMass_g5_ss_56x32.uu
uu/64/: effMass_g5_ll_64x32.uu  effMass_g5_ss_64x32.uu
(+1416 files in other folders)
